# ProjetoML

./: app.py  pyproject.toml
